[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bands"
authors = [{name = "gottaeat", email = "mss@tutanota.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]

dependencies = [
    "beautifulsoup4 >= 4.12.2",
    "openai >= 0.28.1",
    "PyYAML >= 6.0.0",
]

[project.urls]
Source = "http://github.com/gottaeat/bands"

[project.scripts]
bands = "bands.cli:run"
