[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "bands"
authors = [{name = "gottaeat", email = "mss@tutanota.de"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
requires-python = "==3.11"

dependencies = [
    "beautifulsoup4 == 4.14.3",
    "openai == 2.37.0",
    "PyYAML == 6.0.3",
]

[project.urls]
Source = "http://github.com/gottaeat/bands"

[project.scripts]
bands = "bands.cli:run"
